# mappl-pldi24-ae

./: Dockerfile  Dockerfile.md  LICENSE  README.md  dice.nix  dune-project  fggs.nix  flake.nix  mappl.nix  mappl.opam  mlcuddidl.nix  perpl.nix  torch-semiring-einsum.nix  yojson.nix
bench/Fig1/: a.mappl  c.mappl  e.mappl  g.mappl
bench/PLDI/: README.md  bench.sh
bench/PLDI/hmm/: Makefile  bench.enum.sh  bench.mappl.sh  bench.perpl.sh  footer.py  hmm.enum.py  hmm.mappl  hmm.perpl.pl  plot.py
bench/PLDI/hmm2/: Makefile  bench.enum.sh  bench.mappl.sh  bench.perpl.sh  footer.py  header.py  hmm2.enum.py  hmm2.mappl  hmm2.perpl.pl  plot.py
bench/PLDI/hmm_mixed_beta_bernoulli/: Makefile  bench.exact.sh  bench.is.sh  bench.mappl.sh  footer.py  hmm_mixed.is.py  hmm_mixed.mappl  hmm_mixed.mapplexact.py  plot.py
bench/PLDI/hmm_mixed_beta_normal/: Makefile  bench.is.sh  bench.mappl.sh  bench.mapplwm.sh  footer.py  hmm_mixed.is.py  hmm_mixed.mappl  hmm_mixed.mapplwm.py  plot.py
bench/PLDI/pcfg/: Makefile  bench.base.sh  (+11 more)
bench/new/: README.md  caesar.mappl  coin1.mappl  coin2.mappl  coin3.mappl  coin4.mappl  coin5.mappl  diamond.mappl  dicefig1.mappl  ladder.mappl  step-by-step.md
lib/: ANF.ml  AbstractSyntaxTree.ml  Common.ml  ConstantPropagation.ml  EtaConversion.ml  GeneratingFunction.ml  Hoisting.ml  Identifier.ml  InformationType.ml  InformationTyping.ml  Level.ml  Lexer.mll  Parse.ml  Parser.mly  PuretoFunc.ml  PyroGeneration.ml  RustGeneration.ml  Solver.ml  Timer.ml  Type.ml  Typing.ml  VariableElimination.ml  dune  minih.mly
pyro/: utils.py
test/: dune
